Passes spec for initializing Player constructor

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,20 @@
-  
+table {
+  border: 25px solid gray;
+  margin: 20px;
+}
+
+.row {
+  width: 120px;
+  height: 120px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 70px;
+  color: blue;
+  border: 3px solid gray;
+}
+
+h1 {
+  margin: 20px;
+  text-align: center;
+  color: blue;
+}
